fix css issue with notification bar by wrapping it in a parent div

--- a/src/components/nav.module.css
+++ b/src/components/nav.module.css
@@ -87,7 +87,7 @@
   padding: 3px 10px;
   color: white;
   font-size: 17px;
-  font-weight: 400;
+  font-weight: 600;
   display: block;
   transition: all 500ms;
   text-decoration: none;
